--- a/reports/coverage.xml
+++ b/reports/coverage.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0"?>
 <!DOCTYPE coverage SYSTEM "http://cobertura.sourceforge.net/xml/coverage-04.dtd">
 
-<coverage line-rate="0.8913043478260869" branch-rate="0.7307692307692307" lines-covered="82" lines-valid="92" branches-covered="19" branches-valid="26" complexity="2.2222222222222223" version="2.1.1" timestamp="1441775773389">
+<coverage line-rate="0.8936170212765957" branch-rate="0.7307692307692307" lines-covered="84" lines-valid="94" branches-covered="19" branches-valid="26" complexity="2.1578947368421053" version="2.1.1" timestamp="1441781522191">
 	<sources>
 		<source>src</source>
 	</sources>
 	<packages>
-		<package name="com.tw.biblioteca" line-rate="0.8913043478260869" branch-rate="0.7307692307692307" complexity="2.2222222222222223">
+		<package name="com.tw.biblioteca" line-rate="0.8936170212765957" branch-rate="0.7307692307692307" complexity="2.1578947368421053">
 			<classes>
 				<class name="com.tw.biblioteca.BibliotecaApp" filename="com/tw/biblioteca/BibliotecaApp.java" line-rate="0.6363636363636364" branch-rate="1.0" complexity="1.5">
 					<methods>
@@ -52,34 +52,34 @@
 					<methods>
 						<method name="&lt;init&gt;" signature="(Ljava/lang/String;Ljava/lang/String;Ljava/lang/String;)V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="9" hits="45" branch="false"/>
-								<line number="10" hits="45" branch="false"/>
-								<line number="11" hits="45" branch="false"/>
-								<line number="12" hits="45" branch="false"/>
-								<line number="13" hits="45" branch="false"/>
+								<line number="9" hits="47" branch="false"/>
+								<line number="10" hits="47" branch="false"/>
+								<line number="11" hits="47" branch="false"/>
+								<line number="12" hits="47" branch="false"/>
+								<line number="13" hits="47" branch="false"/>
 							</lines>
 						</method>
 						<method name="equals" signature="(Ljava/lang/Object;)Z" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="21" hits="11" branch="true" condition-coverage="100% (2/2)">
+								<line number="21" hits="14" branch="true" condition-coverage="100% (2/2)">
 									<conditions>
 										<condition number="0" type="jump" coverage="100%"/>
 									</conditions>
 								</line>
 								<line number="22" hits="2" branch="false"/>
-								<line number="24" hits="9" branch="true" condition-coverage="100% (2/2)">
+								<line number="24" hits="12" branch="true" condition-coverage="100% (2/2)">
 									<conditions>
 										<condition number="0" type="jump" coverage="100%"/>
 									</conditions>
 								</line>
 								<line number="25" hits="1" branch="false"/>
-								<line number="27" hits="8" branch="false"/>
-								<line number="28" hits="8" branch="true" condition-coverage="100% (2/2)">
+								<line number="27" hits="11" branch="false"/>
+								<line number="28" hits="11" branch="true" condition-coverage="100% (2/2)">
 									<conditions>
 										<condition number="0" type="jump" coverage="100%"/>
 									</conditions>
 								</line>
-								<line number="29" hits="5" branch="false"/>
+								<line number="29" hits="8" branch="false"/>
 								<line number="31" hits="3" branch="false"/>
 							</lines>
 						</method>
@@ -101,38 +101,38 @@
 						</method>
 						<method name="printInfo" signature="()V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="16" hits="9" branch="false"/>
-								<line number="17" hits="9" branch="false"/>
+								<line number="16" hits="12" branch="false"/>
+								<line number="17" hits="12" branch="false"/>
 							</lines>
 						</method>
 					</methods>
 					<lines>
-						<line number="9" hits="45" branch="false"/>
-						<line number="10" hits="45" branch="false"/>
-						<line number="11" hits="45" branch="false"/>
-						<line number="12" hits="45" branch="false"/>
-						<line number="13" hits="45" branch="false"/>
-						<line number="16" hits="9" branch="false"/>
-						<line number="17" hits="9" branch="false"/>
-						<line number="21" hits="11" branch="true" condition-coverage="100% (2/2)">
+						<line number="9" hits="47" branch="false"/>
+						<line number="10" hits="47" branch="false"/>
+						<line number="11" hits="47" branch="false"/>
+						<line number="12" hits="47" branch="false"/>
+						<line number="13" hits="47" branch="false"/>
+						<line number="16" hits="12" branch="false"/>
+						<line number="17" hits="12" branch="false"/>
+						<line number="21" hits="14" branch="true" condition-coverage="100% (2/2)">
 							<conditions>
 								<condition number="0" type="jump" coverage="100%"/>
 							</conditions>
 						</line>
 						<line number="22" hits="2" branch="false"/>
-						<line number="24" hits="9" branch="true" condition-coverage="100% (2/2)">
+						<line number="24" hits="12" branch="true" condition-coverage="100% (2/2)">
 							<conditions>
 								<condition number="0" type="jump" coverage="100%"/>
 							</conditions>
 						</line>
 						<line number="25" hits="1" branch="false"/>
-						<line number="27" hits="8" branch="false"/>
-						<line number="28" hits="8" branch="true" condition-coverage="100% (2/2)">
+						<line number="27" hits="11" branch="false"/>
+						<line number="28" hits="11" branch="true" condition-coverage="100% (2/2)">
 							<conditions>
 								<condition number="0" type="jump" coverage="100%"/>
 							</conditions>
 						</line>
-						<line number="29" hits="5" branch="false"/>
+						<line number="29" hits="8" branch="false"/>
 						<line number="31" hits="3" branch="false"/>
 						<line number="36" hits="0" branch="false"/>
 						<line number="37" hits="0" branch="true" condition-coverage="0% (0/2)">
@@ -158,7 +158,7 @@
 								<line number="10" hits="4" branch="false"/>
 							</lines>
 						</method>
-						<method name="checkout" signature="()V" line-rate="1.0" branch-rate="1.0" complexity="0">
+						<method name="issueBook" signature="()V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
 								<line number="13" hits="4" branch="false"/>
 								<line number="14" hits="4" branch="false"/>
@@ -192,156 +192,166 @@
 						<line number="20" hits="4" branch="false"/>
 					</lines>
 				</class>
-				<class name="com.tw.biblioteca.Library" filename="com/tw/biblioteca/Library.java" line-rate="1.0" branch-rate="1.0" complexity="2.0">
+				<class name="com.tw.biblioteca.Library" filename="com/tw/biblioteca/Library.java" line-rate="1.0" branch-rate="1.0" complexity="1.75">
 					<methods>
 						<method name="&lt;init&gt;" signature="()V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
 								<line number="7" hits="12" branch="false"/>
-								<line number="9" hits="12" branch="false"/>
+								<line number="8" hits="12" branch="false"/>
 								<line number="10" hits="12" branch="false"/>
 								<line number="11" hits="12" branch="false"/>
 								<line number="12" hits="12" branch="false"/>
 								<line number="13" hits="12" branch="false"/>
+								<line number="14" hits="12" branch="false"/>
+							</lines>
+						</method>
+						<method name="addBook" signature="(Ljava/lang/String;)V" line-rate="1.0" branch-rate="1.0" complexity="0">
+							<lines>
+								<line number="34" hits="1" branch="false"/>
+								<line number="35" hits="1" branch="false"/>
+								<line number="36" hits="1" branch="false"/>
 							</lines>
 						</method>
 						<method name="printList" signature="()V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="16" hits="3" branch="false"/>
-								<line number="17" hits="11" branch="true" condition-coverage="100% (2/2)">
+								<line number="17" hits="4" branch="false"/>
+								<line number="18" hits="15" branch="true" condition-coverage="100% (2/2)">
 									<conditions>
 										<condition number="0" type="jump" coverage="100%"/>
 									</conditions>
 								</line>
-								<line number="18" hits="8" branch="false"/>
-								<line number="19" hits="3" branch="false"/>
+								<line number="19" hits="11" branch="false"/>
+								<line number="20" hits="4" branch="false"/>
 							</lines>
 						</method>
-						<method name="remove" signature="(Ljava/lang/String;)Z" line-rate="1.0" branch-rate="1.0" complexity="0">
+						<method name="removeBook" signature="(Ljava/lang/String;)Z" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="22" hits="3" branch="false"/>
-								<line number="23" hits="3" branch="true" condition-coverage="100% (2/2)">
+								<line number="23" hits="4" branch="false"/>
+								<line number="24" hits="4" branch="true" condition-coverage="100% (2/2)">
 									<conditions>
 										<condition number="0" type="jump" coverage="100%"/>
 									</conditions>
 								</line>
-								<line number="24" hits="2" branch="false"/>
-								<line number="25" hits="2" branch="false"/>
-								<line number="28" hits="1" branch="false"/>
+								<line number="25" hits="3" branch="false"/>
+								<line number="26" hits="3" branch="false"/>
+								<line number="29" hits="1" branch="false"/>
 							</lines>
 						</method>
 					</methods>
 					<lines>
 						<line number="7" hits="12" branch="false"/>
-						<line number="9" hits="12" branch="false"/>
+						<line number="8" hits="12" branch="false"/>
 						<line number="10" hits="12" branch="false"/>
 						<line number="11" hits="12" branch="false"/>
 						<line number="12" hits="12" branch="false"/>
 						<line number="13" hits="12" branch="false"/>
-						<line number="16" hits="3" branch="false"/>
-						<line number="17" hits="11" branch="true" condition-coverage="100% (2/2)">
+						<line number="14" hits="12" branch="false"/>
+						<line number="17" hits="4" branch="false"/>
+						<line number="18" hits="15" branch="true" condition-coverage="100% (2/2)">
 							<conditions>
 								<condition number="0" type="jump" coverage="100%"/>
 							</conditions>
 						</line>
-						<line number="18" hits="8" branch="false"/>
-						<line number="19" hits="3" branch="false"/>
-						<line number="22" hits="3" branch="false"/>
-						<line number="23" hits="3" branch="true" condition-coverage="100% (2/2)">
+						<line number="19" hits="11" branch="false"/>
+						<line number="20" hits="4" branch="false"/>
+						<line number="23" hits="4" branch="false"/>
+						<line number="24" hits="4" branch="true" condition-coverage="100% (2/2)">
 							<conditions>
 								<condition number="0" type="jump" coverage="100%"/>
 							</conditions>
 						</line>
-						<line number="24" hits="2" branch="false"/>
-						<line number="25" hits="2" branch="false"/>
-						<line number="28" hits="1" branch="false"/>
+						<line number="25" hits="3" branch="false"/>
+						<line number="26" hits="3" branch="false"/>
+						<line number="29" hits="1" branch="false"/>
+						<line number="34" hits="1" branch="false"/>
+						<line number="35" hits="1" branch="false"/>
+						<line number="36" hits="1" branch="false"/>
 					</lines>
 				</class>
-				<class name="com.tw.biblioteca.Menu" filename="com/tw/biblioteca/Menu.java" line-rate="0.9047619047619048" branch-rate="0.6666666666666666" complexity="2.5">
+				<class name="com.tw.biblioteca.Menu" filename="com/tw/biblioteca/Menu.java" line-rate="0.9" branch-rate="0.6666666666666666" complexity="2.5">
 					<methods>
 						<method name="&lt;init&gt;" signature="()V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="10" hits="7" branch="false"/>
-								<line number="12" hits="7" branch="false"/>
-								<line number="13" hits="7" branch="false"/>
-								<line number="14" hits="7" branch="false"/>
-								<line number="15" hits="7" branch="false"/>
-								<line number="16" hits="7" branch="false"/>
-								<line number="17" hits="7" branch="false"/>
+								<line number="10" hits="6" branch="false"/>
+								<line number="12" hits="6" branch="false"/>
+								<line number="13" hits="6" branch="false"/>
+								<line number="14" hits="6" branch="false"/>
+								<line number="15" hits="6" branch="false"/>
+								<line number="16" hits="6" branch="false"/>
 							</lines>
 						</method>
 						<method name="chosenOption" signature="()I" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="28" hits="7" branch="false"/>
-								<line number="30" hits="7" branch="false"/>
-								<line number="31" hits="7" branch="false"/>
+								<line number="27" hits="6" branch="false"/>
+								<line number="29" hits="6" branch="false"/>
+								<line number="30" hits="6" branch="false"/>
+								<line number="31" hits="1" branch="false"/>
 								<line number="32" hits="1" branch="false"/>
-								<line number="33" hits="1" branch="false"/>
 							</lines>
 						</method>
 						<method name="chosenValidOption" signature="()I" line-rate="1.0" branch-rate="0.5" complexity="0">
 							<lines>
-								<line number="20" hits="4" branch="false"/>
-								<line number="22" hits="4" branch="false"/>
-								<line number="23" hits="4" branch="true" condition-coverage="50% (1/2)">
+								<line number="19" hits="3" branch="false"/>
+								<line number="21" hits="3" branch="false"/>
+								<line number="22" hits="3" branch="true" condition-coverage="50% (1/2)">
 									<conditions>
 										<condition number="0" type="jump" coverage="50%"/>
 									</conditions>
 								</line>
-								<line number="24" hits="4" branch="false"/>
+								<line number="23" hits="3" branch="false"/>
 							</lines>
 						</method>
 						<method name="isChoiceValid" signature="(I)Z" line-rate="0.6" branch-rate="0.75" complexity="0">
 							<lines>
-								<line number="38" hits="10" branch="true" condition-coverage="50% (1/2)">
+								<line number="37" hits="6" branch="true" condition-coverage="50% (1/2)">
 									<conditions>
 										<condition number="0" type="jump" coverage="50%"/>
 									</conditions>
 								</line>
-								<line number="39" hits="10" branch="true" condition-coverage="100% (2/2)">
+								<line number="38" hits="6" branch="true" condition-coverage="100% (2/2)">
 									<conditions>
 										<condition number="0" type="jump" coverage="100%"/>
 									</conditions>
 								</line>
-								<line number="40" hits="4" branch="false"/>
+								<line number="39" hits="3" branch="false"/>
+								<line number="41" hits="0" branch="false"/>
 								<line number="42" hits="0" branch="false"/>
-								<line number="43" hits="0" branch="false"/>
 							</lines>
 						</method>
 					</methods>
 					<lines>
-						<line number="10" hits="7" branch="false"/>
-						<line number="12" hits="7" branch="false"/>
-						<line number="13" hits="7" branch="false"/>
-						<line number="14" hits="7" branch="false"/>
-						<line number="15" hits="7" branch="false"/>
-						<line number="16" hits="7" branch="false"/>
-						<line number="17" hits="7" branch="false"/>
-						<line number="20" hits="4" branch="false"/>
-						<line number="22" hits="4" branch="false"/>
-						<line number="23" hits="4" branch="true" condition-coverage="50% (1/2)">
+						<line number="10" hits="6" branch="false"/>
+						<line number="12" hits="6" branch="false"/>
+						<line number="13" hits="6" branch="false"/>
+						<line number="14" hits="6" branch="false"/>
+						<line number="15" hits="6" branch="false"/>
+						<line number="16" hits="6" branch="false"/>
+						<line number="19" hits="3" branch="false"/>
+						<line number="21" hits="3" branch="false"/>
+						<line number="22" hits="3" branch="true" condition-coverage="50% (1/2)">
 							<conditions>
 								<condition number="0" type="jump" coverage="50%"/>
 							</conditions>
 						</line>
-						<line number="24" hits="4" branch="false"/>
-						<line number="28" hits="7" branch="false"/>
-						<line number="30" hits="7" branch="false"/>
-						<line number="31" hits="7" branch="false"/>
+						<line number="23" hits="3" branch="false"/>
+						<line number="27" hits="6" branch="false"/>
+						<line number="29" hits="6" branch="false"/>
+						<line number="30" hits="6" branch="false"/>
+						<line number="31" hits="1" branch="false"/>
 						<line number="32" hits="1" branch="false"/>
-						<line number="33" hits="1" branch="false"/>
-						<line number="38" hits="10" branch="true" condition-coverage="50% (1/2)">
+						<line number="37" hits="6" branch="true" condition-coverage="50% (1/2)">
 							<conditions>
 								<condition number="0" type="jump" coverage="50%"/>
 							</conditions>
 						</line>
-						<line number="39" hits="10" branch="true" condition-coverage="100% (2/2)">
+						<line number="38" hits="6" branch="true" condition-coverage="100% (2/2)">
 							<conditions>
 								<condition number="0" type="jump" coverage="100%"/>
 							</conditions>
 						</line>
-						<line number="40" hits="4" branch="false"/>
+						<line number="39" hits="3" branch="false"/>
+						<line number="41" hits="0" branch="false"/>
 						<line number="42" hits="0" branch="false"/>
-						<line number="43" hits="0" branch="false"/>
 					</lines>
 				</class>
 				<class name="com.tw.biblioteca.TaskDispatcher" filename="com/tw/biblioteca/TaskDispatcher.java" line-rate="1.0" branch-rate="0.75" complexity="2.5">
@@ -365,7 +375,6 @@
 								<line number="18" hits="1" branch="false"/>
 								<line number="20" hits="2" branch="false"/>
 								<line number="22" hits="1" branch="false"/>
-								<line number="23" hits="1" branch="false"/>
 								<line number="25" hits="2" branch="false"/>
 							</lines>
 						</method>
@@ -384,7 +393,6 @@
 						<line number="18" hits="1" branch="false"/>
 						<line number="20" hits="2" branch="false"/>
 						<line number="22" hits="1" branch="false"/>
-						<line number="23" hits="1" branch="false"/>
 						<line number="25" hits="2" branch="false"/>
 					</lines>
 				</class>
