--- a/reports/coverage.xml
+++ b/reports/coverage.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0"?>
 <!DOCTYPE coverage SYSTEM "http://cobertura.sourceforge.net/xml/coverage-04.dtd">
 
-<coverage line-rate="0.900990099009901" branch-rate="0.7407407407407407" lines-covered="91" lines-valid="101" branches-covered="20" branches-valid="27" complexity="2.15" version="2.1.1" timestamp="1441781910073">
+<coverage line-rate="0.9019607843137255" branch-rate="0.7407407407407407" lines-covered="92" lines-valid="102" branches-covered="20" branches-valid="27" complexity="2.15" version="2.1.1" timestamp="1441782056419">
 	<sources>
 		<source>src</source>
 	</sources>
 	<packages>
-		<package name="com.tw.biblioteca" line-rate="0.900990099009901" branch-rate="0.7407407407407407" complexity="2.15">
+		<package name="com.tw.biblioteca" line-rate="0.9019607843137255" branch-rate="0.7407407407407407" complexity="2.15">
 			<classes>
 				<class name="com.tw.biblioteca.BibliotecaApp" filename="com/tw/biblioteca/BibliotecaApp.java" line-rate="0.6363636363636364" branch-rate="1.0" complexity="1.5">
 					<methods>
@@ -282,90 +282,92 @@
 						<line number="36" hits="1" branch="false"/>
 					</lines>
 				</class>
-				<class name="com.tw.biblioteca.Menu" filename="com/tw/biblioteca/Menu.java" line-rate="0.9" branch-rate="0.6666666666666666" complexity="2.5">
+				<class name="com.tw.biblioteca.Menu" filename="com/tw/biblioteca/Menu.java" line-rate="0.9047619047619048" branch-rate="0.6666666666666666" complexity="2.5">
 					<methods>
 						<method name="&lt;init&gt;" signature="()V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="10" hits="6" branch="false"/>
-								<line number="12" hits="6" branch="false"/>
-								<line number="13" hits="6" branch="false"/>
-								<line number="14" hits="6" branch="false"/>
-								<line number="15" hits="6" branch="false"/>
-								<line number="16" hits="6" branch="false"/>
+								<line number="10" hits="7" branch="false"/>
+								<line number="12" hits="7" branch="false"/>
+								<line number="13" hits="7" branch="false"/>
+								<line number="14" hits="7" branch="false"/>
+								<line number="15" hits="7" branch="false"/>
+								<line number="16" hits="7" branch="false"/>
+								<line number="17" hits="7" branch="false"/>
 							</lines>
 						</method>
 						<method name="chosenOption" signature="()I" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="27" hits="6" branch="false"/>
-								<line number="29" hits="6" branch="false"/>
-								<line number="30" hits="6" branch="false"/>
-								<line number="31" hits="1" branch="false"/>
+								<line number="28" hits="7" branch="false"/>
+								<line number="30" hits="7" branch="false"/>
+								<line number="31" hits="7" branch="false"/>
 								<line number="32" hits="1" branch="false"/>
+								<line number="33" hits="1" branch="false"/>
 							</lines>
 						</method>
 						<method name="chosenValidOption" signature="()I" line-rate="1.0" branch-rate="0.5" complexity="0">
 							<lines>
-								<line number="19" hits="3" branch="false"/>
-								<line number="21" hits="3" branch="false"/>
-								<line number="22" hits="3" branch="true" condition-coverage="50% (1/2)">
+								<line number="20" hits="4" branch="false"/>
+								<line number="22" hits="4" branch="false"/>
+								<line number="23" hits="4" branch="true" condition-coverage="50% (1/2)">
 									<conditions>
 										<condition number="0" type="jump" coverage="50%"/>
 									</conditions>
 								</line>
-								<line number="23" hits="3" branch="false"/>
+								<line number="24" hits="4" branch="false"/>
 							</lines>
 						</method>
 						<method name="isChoiceValid" signature="(I)Z" line-rate="0.6" branch-rate="0.75" complexity="0">
 							<lines>
-								<line number="37" hits="6" branch="true" condition-coverage="50% (1/2)">
+								<line number="38" hits="10" branch="true" condition-coverage="50% (1/2)">
 									<conditions>
 										<condition number="0" type="jump" coverage="50%"/>
 									</conditions>
 								</line>
-								<line number="38" hits="6" branch="true" condition-coverage="100% (2/2)">
+								<line number="39" hits="10" branch="true" condition-coverage="100% (2/2)">
 									<conditions>
 										<condition number="0" type="jump" coverage="100%"/>
 									</conditions>
 								</line>
-								<line number="39" hits="3" branch="false"/>
-								<line number="41" hits="0" branch="false"/>
+								<line number="40" hits="4" branch="false"/>
 								<line number="42" hits="0" branch="false"/>
+								<line number="43" hits="0" branch="false"/>
 							</lines>
 						</method>
 					</methods>
 					<lines>
-						<line number="10" hits="6" branch="false"/>
-						<line number="12" hits="6" branch="false"/>
-						<line number="13" hits="6" branch="false"/>
-						<line number="14" hits="6" branch="false"/>
-						<line number="15" hits="6" branch="false"/>
-						<line number="16" hits="6" branch="false"/>
-						<line number="19" hits="3" branch="false"/>
-						<line number="21" hits="3" branch="false"/>
-						<line number="22" hits="3" branch="true" condition-coverage="50% (1/2)">
+						<line number="10" hits="7" branch="false"/>
+						<line number="12" hits="7" branch="false"/>
+						<line number="13" hits="7" branch="false"/>
+						<line number="14" hits="7" branch="false"/>
+						<line number="15" hits="7" branch="false"/>
+						<line number="16" hits="7" branch="false"/>
+						<line number="17" hits="7" branch="false"/>
+						<line number="20" hits="4" branch="false"/>
+						<line number="22" hits="4" branch="false"/>
+						<line number="23" hits="4" branch="true" condition-coverage="50% (1/2)">
 							<conditions>
 								<condition number="0" type="jump" coverage="50%"/>
 							</conditions>
 						</line>
-						<line number="23" hits="3" branch="false"/>
-						<line number="27" hits="6" branch="false"/>
-						<line number="29" hits="6" branch="false"/>
-						<line number="30" hits="6" branch="false"/>
-						<line number="31" hits="1" branch="false"/>
+						<line number="24" hits="4" branch="false"/>
+						<line number="28" hits="7" branch="false"/>
+						<line number="30" hits="7" branch="false"/>
+						<line number="31" hits="7" branch="false"/>
 						<line number="32" hits="1" branch="false"/>
-						<line number="37" hits="6" branch="true" condition-coverage="50% (1/2)">
+						<line number="33" hits="1" branch="false"/>
+						<line number="38" hits="10" branch="true" condition-coverage="50% (1/2)">
 							<conditions>
 								<condition number="0" type="jump" coverage="50%"/>
 							</conditions>
 						</line>
-						<line number="38" hits="6" branch="true" condition-coverage="100% (2/2)">
+						<line number="39" hits="10" branch="true" condition-coverage="100% (2/2)">
 							<conditions>
 								<condition number="0" type="jump" coverage="100%"/>
 							</conditions>
 						</line>
-						<line number="39" hits="3" branch="false"/>
-						<line number="41" hits="0" branch="false"/>
+						<line number="40" hits="4" branch="false"/>
 						<line number="42" hits="0" branch="false"/>
+						<line number="43" hits="0" branch="false"/>
 					</lines>
 				</class>
 				<class name="com.tw.biblioteca.TaskDispatcher" filename="com/tw/biblioteca/TaskDispatcher.java" line-rate="1.0" branch-rate="0.8" complexity="3.0">
